[project]
name = "multi-threading-and-concurrency"
version = "0.1.0"
description = ""
authors = [
    {name = "Ilnur",email = "ilnur.altezza@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.0"

